src/test/deca/context/invalid/test_pass_3_var_not_declared.deca
// Description:
//    Program testing var not declared
//
// Results:
//    error
//
// History:
//    Created on 13/01/2025

{
    x = 2;
}
